# superchat-monitor

./: .gitignore  .python-version  Dockerfile  README.md  launch_monitor.sh  monitor_ctl.sh  monitor_tip.py  pyproject.toml  requirements.txt  streamers.json.example
.github/workflows/: docker-build.yml
.swift-module-cache/2WO3ZO6IBG0KZ/: AvailabilityMacros-37BGBEWTDMWX1.pcm  CFNetwork-Q0IIFZCOTOEA.pcm  CoreFoundation-1P741AFH132ZT.pcm  CoreGraphics-1NEFE79JVTGUH.pcm  DarwinFoundation-1KRY4DO7ZDURH.pcm  DiskArbitration-15XXVBR41Y8DJ.pcm  Dispatch-4VQNTL0CVL6Z.pcm  IOKit-14FVM2QL1TOI1.pcm  MachO-2OUS5QJKARL2B.pcm  ObjectiveC-1145Y16JWR3HJ.pcm  Security-HNIQJGWM5403.pcm  SwiftShims-22LOMWGXQBUM1.pcm  TargetConditionals-FQUNDUW4R2J2.pcm  XPC-3B53U8VWOVO3J.pcm  _Builtin_float-T1RMWAASKLN.pcm  _Builtin_inttypes-T1RMWAASKLN.pcm  _Builtin_iso646-T1RMWAASKLN.pcm  _Builtin_limits-T1RMWAASKLN.pcm  _Builtin_stdarg-T1RMWAASKLN.pcm  _Builtin_stdatomic-T1RMWAASKLN.pcm  _Builtin_stdbool-T1RMWAASKLN.pcm  _Builtin_stddef-T1RMWAASKLN.pcm  _Builtin_stdint-T1RMWAASKLN.pcm  _Builtin_tgmath-T1RMWAASKLN.pcm  _SwiftConcurrencyShims-22LOMWGXQBUM1.pcm  __wctype-DLY4PS33ZRY2.pcm  _assert-DLY4PS33ZRY2.pcm  _complex-DLY4PS33ZRY2.pcm  _ctype-DLY4PS33ZRY2.pcm  _errno-DLY4PS33ZRY2.pcm  (+42 more)
desktop-tauri-macos/: .gitignore  README.md  package-lock.json  package.json
desktop-tauri-macos/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri-macos/src-tauri/capabilities/: default.json
desktop-tauri-macos/src-tauri/icons/: icon.icns
desktop-tauri-macos/src-tauri/src/: main.rs
(+213 files in other folders)
