[project]
name = "superchat-monitor"
version = "0.1.0"
description = "Stripchat/Superchat live room tip and event monitor"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    "certifi>=2024.0.0",
    "nicegui>=1.4.0",
    "playwright>=1.48.0",
    "requests>=2.32.0",
]
