[package]
name = "superchat-monitor-macos"
version = "0.1.0"
description = "SuperChat Monitor Desktop Shell for macOS"
authors = ["superchat-monitor"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
libc = "0.2"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
